--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3'
+version: '3.8'
 
 services:
-  
+
   stateless-auth-db:
     container_name: stateless-auth-db
     image: postgres:latest
@@ -33,38 +33,38 @@ services:
       - auth
     ports:
       - "6379:6379"
+
   stateless-auth-api:
-    build: './stateless/stateless-auth-api'
+    build: ./stateless/stateless-auth-api
     container_name: stateless-auth-api
     depends_on:
       - stateless-auth-db
     networks:
       - auth
     environment:
-      - PORT = 8080
-      - DB_HOST=stateless-auth-db
-      - DB_NAME=auth-db
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
-      - DB_PORT=5432
+      PORT: 8080
+      DB_HOST: stateless-auth-db
+      DB_NAME: auth-db
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_PORT: 5432
     ports:
-      - 8080:8080  
+      - "8080:8080"
 
   stateless-any-api:
-    build: './stateless/stateless-any-api'
+    build: ./stateless/stateless-any-api
     container_name: stateless-any-api
     depends_on:
       - stateless-auth-db
     networks:
       - auth
     environment:
-      - PORT = 8081
-      
+      PORT: 8081
     ports:
-      - 8081:8081
+      - "8081:8081"
 
   stateful-auth-api:
-    build: './stateful/stateful-auth-api'
+    build: ./stateful/stateful-auth-api
     container_name: stateful-auth-api
     depends_on:
       - stateful-auth-db
@@ -72,26 +72,26 @@ services:
     networks:
       - auth
     environment:
-      - PORT= 8082
-      - DB_HOST=stateful-auth-db
-      - DB_NAME=auth-db
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
-      - DB_PORT=5432
-      - REDIS_HOST=token-redis
-      - REDIS_PORT=6379
+      PORT: 8082
+      DB_HOST: stateful-auth-db
+      DB_NAME: auth-db
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_PORT: 5432
+      REDIS_HOST: token-redis
+      REDIS_PORT: 6379
     ports:
-      - 8082:8082
+      - "8082:8082"
 
   stateful-any-api:
-    build: './stateful/stateful-any-api'
+    build: ./stateful/stateful-any-api
     container_name: stateful-any-api
     networks:
       - auth
     environment:
-      - PORT= 8083
+      PORT: 8083
     ports:
-      - 8083:8083
+      - "8083:8083"
 
 networks:
   auth:
