--- a/stateful/stateful-auth-api/src/main/resources/application.yml
+++ b/stateful/stateful-auth-api/src/main/resources/application.yml
@@ -21,3 +21,7 @@ jpa:
   properties:
     hibernate:
       dialect: org.hibernate.dialect.PostgreSQLDialect
+
+redis:
+  host: ${REDIS_HOST:localhost}
+  port: ${REDIS_HOST:6379}
