--- a/stateful/stateful-auth-api/src/main/resources/application.yml
+++ b/stateful/stateful-auth-api/src/main/resources/application.yml
@@ -7,21 +7,20 @@ spring:
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/${DB_NAME:auth-db}
     username: ${DB_USER:postgres}
     password: ${DB_PASSWORD:postgres}
-    initialization-mode: always
     initialize: true
     continue-on-error: true
     platform: postgresql
     maxActive: 3
 
-jpa:
-  hibernate:
-    ddl-auto: create-drop
-    format_sql: true
-  show_sql: false
-  properties:
+  jpa:
     hibernate:
-      dialect: org.hibernate.dialect.PostgreSQLDialect
+      ddl-auto: create-drop
+      format_sql: true
+    show_sql: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
 redis:
   host: ${REDIS_HOST:localhost}
-  port: ${REDIS_HOST:6379}
+  port: ${REDIS_PORT:6379}
